--- a/todomvc/index.html
+++ b/todomvc/index.html
@@ -7,6 +7,7 @@
 		<link rel="stylesheet" href="../node_modules/todomvc-app-css/index.css">
 	</head>
 	<body>
+		<button id="start-test" type="button">Start testing</button>
 		<section id="todoapp" class="todoapp">
 		</section>
 		<footer id="info">
@@ -15,8 +16,27 @@
 			<p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
 		</footer>
 		<script src="../node_modules/steal/steal.js" main="@empty">
-			var canWorker = require("can-worker/window/");
-			canWorker("todomvc/main");
+			//var canWorker = require("can-worker/window/");
+			//canWorker("todomvc/main");
+			require("todomvc/main");
+		</script>
+		<script>
+			document.getElementById("start-test").addEventListener("click", function(){
+				var numberOfItemsToAdd = 100;
+				for (var i = 0; i < numberOfItemsToAdd; i++) {
+					var newTodo = document.getElementById("new-todo");
+					newTodo.value = 'Something to do ' + i;
+
+					var changeEvent = document.createEvent('Event');
+					changeEvent.initEvent('change', true, true);
+					newTodo.dispatchEvent(changeEvent);
+
+					var keydownEvent = document.createEvent('Event');
+					keydownEvent.initEvent('keyup', true, true);
+					keydownEvent.keyCode = 13; // VK_ENTER
+					newTodo.dispatchEvent(keydownEvent);
+				}
+			});
 		</script>
 	</body>
 </html>
