--- a/demo/simple_event.html
+++ b/demo/simple_event.html
@@ -1,4 +1,4 @@
 <script src="../node_modules/steal/steal.js">
-	var canMin = require("can-worker/can-min");
-	canMin("demo/events");
+	var workerRendering = require("can-worker/window/");
+	workerRendering("demo/events");
 </script>
