--- a/test/test.html
+++ b/test/test.html
@@ -1,3 +1,6 @@
-<title>can-worker tests</title>
+<title>worker-render tests</title>
+<script>
+	FuncUnit = { frameMode: true };
+</script>
 <script src="../node_modules/steal/steal.js" main="test/test"></script>
 <div id="qunit-test-area"></script>
