canjs dbmonster demo

--- a/demo/basics/index.html
+++ b/demo/basics/index.html
@@ -23,7 +23,7 @@
 
 			  <td class="query-count">
 				<span class="{{countClassName}}">
-					{{queries.length}}
+					{{queryCount}}
 				</span>
 			  </td>
 
